--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -11,3 +11,9 @@
 #num3 {
     font-size: 24px;
 }
+
+#num4 {
+    background-color: rgb(101, 252, 134);
+    font-size: 24px;
+    font-weight: bold;
+}
